--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^4.5.3",
+    "file-loader": "^6.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.5.5",
+    "next-fonts": "^1.4.0",
+    "next-images": "^1.6.2",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
+    "react-parallax-tilt": "^1.4.66",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typed.js": "^2.0.11",
+    "vanilla-lazyload": "^17.1.3"
   }
 }
