--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "file-loader": "^6.2.0",
@@ -17,14 +18,18 @@
     "next": "9.5.5",
     "next-fonts": "^1.4.0",
     "next-images": "^1.6.2",
+    "next-purgecss": "^4.0.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-parallax-tilt": "^1.4.66",
     "react-redux": "^7.2.1",
+    "react-slick": "^0.27.12",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.1",
     "typed.js": "^2.0.11",
     "vanilla-lazyload": "^17.1.3"
   }
