--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-parallax-tilt": "^1.4.66",
     "react-redux": "^7.2.1",
     "react-slick": "^0.27.12",
