--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node server.js",
     "next": "next",
     "build": "next build",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
