--- a/.github/workflows/jiasheng-deploy.yml
+++ b/.github/workflows/jiasheng-deploy.yml
@@ -30,9 +30,8 @@ jobs:
     - run: npm run build
     - run: npm run export
     
-    - name: Deploy 🚀
+    - name: Deploy New 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
-        GITHUB_TOKEN: ${{ secret.GITHUB_TOKEN }}
         branch: gh-pages # The branch the action should deploy to.
         folder: out # The folder the action should deploy.
