--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; next dev",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; next build",
     "next": "next",
-    "build": "next build",
     "export": "next export",
     "start": "next start"
   },
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.3",
     "file-loader": "^6.2.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jquery": "^3.6.0",
     "next": "9.5.5",
     "next-fonts": "^1.4.0",
     "next-images": "^1.6.2",
@@ -24,6 +25,8 @@
     "react-hamburger-menu": "^1.2.1",
     "react-parallax-tilt": "^1.4.66",
     "typed.js": "^2.0.11",
-    "vanilla-lazyload": "^17.1.3"
+    "vanilla-lazyload": "^17.1.3",
+    "react-scripts": "2.0.3",
+    "recharts": "1.5.0"
   }
 }
