--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-dom": "^17.0.1",
     "react-hamburger-menu": "^1.2.1",
     "react-parallax-tilt": "^1.4.66",
-    "react-scripts": "^5.0.0",
-    "recharts": "^2.1.9",
+    "react-scripts": "2.0.3",
+    "recharts": "1.5.0",
     "typed.js": "^2.0.11",
     "vanilla-lazyload": "^17.1.3"
   }
