--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-hamburger-menu": "^1.2.1",
     "react-parallax-tilt": "^1.4.66",
