--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
+    "d3-ease": "^3.0.1",
     "file-loader": "^6.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^3.6.0",
@@ -24,6 +25,8 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-hamburger-menu": "^1.2.1",
+    "react-icons": "^4.3.1",
+    "react-move": "^6.5.0",
     "react-parallax-tilt": "^1.4.66",
     "react-scripts": "2.0.3",
     "recharts": "1.5.0",
