--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-move": "^6.5.0",
     "react-parallax-tilt": "^1.4.66",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "2.0.3",
     "recharts": "1.5.0",
     "typed.js": "^2.0.11",
