--- a/package.json
+++ b/package.json
@@ -1,37 +1,30 @@
 {
-  "name": "web",
+  "name": "jiasheng98-github-io",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; next dev",
+    "dev": "next dev",
     "build": "next build",
-    "next": "next",
-    "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "bootstrap": "^4.5.3",
-    "d3-ease": "^3.0.1",
-    "file-loader": "^6.2.0",
-    "isomorphic-unfetch": "^3.0.0",
-    "jquery": "^3.6.0",
-    "next": "9.5.5",
-    "next-fonts": "^1.4.0",
-    "next-images": "^1.6.2",
-    "react": "17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.1",
+    "bootstrap": "^5.3.3",
+    "next": "14.2.4",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "18.2.0",
     "react-hamburger-menu": "^1.2.1",
-    "react-icons": "^4.3.1",
-    "react-move": "^6.5.0",
-    "react-parallax-tilt": "^1.4.66",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "2.0.3",
-    "recharts": "1.5.0",
-    "typed.js": "^2.0.11",
-    "vanilla-lazyload": "^17.1.3"
+    "react-icons": "^5.1.0",
+    "react-parallax-tilt": "^1.7.210",
+    "typed.js": "^2.1.0",
+    "vanilla-lazyload": "^17.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "typescript": "^5.4.5"
   }
 }
