--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "next": "14.2.4",
     "react": "18.2.0",
-    "react-bootstrap": "^2.10.7",
     "react-dom": "18.2.0",
     "react-hamburger-menu": "^1.2.1",
     "react-icons": "^5.1.0",
@@ -24,6 +22,9 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5"
   }
 }
