--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "prop-types": "^15.8.1",
     "react-hamburger-menu": "^1.2.1",
     "react-icons": "^5.1.0",
     "react-parallax-tilt": "^1.7.210",
